--- a/src/Components/Background/Background.css
+++ b/src/Components/Background/Background.css
@@ -2,8 +2,14 @@
 *::after,
 *::before {
   box-sizing: border-box;
+  margin: none;
 }
 
 img {
   max-width: 100%;
+}
+
+.background {
+  height: 100vh;
+  width: 100vw;
 }/*# sourceMappingURL=Background.css.map */
