--- a/src/Components/Glassmorphic Circle/Glassmorphic Circle.scss
+++ b/src/Components/Glassmorphic Circle/Glassmorphic Circle.scss
@@ -12,5 +12,17 @@ img {
   display: flex;
   justify-content: center;
   border: 2px red solid;
-  translate: 0 45vh;
+  margin: auto auto;
+  width: 280px;
+  height: 280px;
+  background: linear-gradient(
+    152.97deg,
+    rgba(255, 255, 255, 0.2) 0%,
+    rgba(255, 255, 255, 0.194792) 2.6%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  backdrop-filter: blur(21px);
+  /* Note: backdrop-filter has minimal browser support */
+
+  border-radius: 1000px;
 }
