Center text inside circle

--- a/src/Components/Glassmorphic Circle/Glassmorphic Circle.scss
+++ b/src/Components/Glassmorphic Circle/Glassmorphic Circle.scss
@@ -11,6 +11,7 @@ img {
 .circle {
   display: flex;
   justify-content: center;
+  align-items: center;
   border: 2px red solid;
   margin: auto auto;
   width: 280px;
