--- a/src/Components/Glassmorphic Circle/Glassmorphic Circle.scss
+++ b/src/Components/Glassmorphic Circle/Glassmorphic Circle.scss
@@ -14,6 +14,8 @@ img {
   align-items: center;
   min-width: 280px;
   min-height: 280px;
+  width: 80vmin;
+  height: 80vmin;
   background: linear-gradient(
     152.97deg,
     rgba(255, 255, 255, 0.2) 0%,
