--- a/src/Components/Clock/Clock.scss
+++ b/src/Components/Clock/Clock.scss
@@ -6,6 +6,7 @@ $light-theme-text: #f2f2f2;
 *::after {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
   font-family: "Inter";
 }
 
@@ -14,15 +15,19 @@ img {
 }
 
 .container-1 {
+  width: 87%;
+  height: 50%;
   color: $light-theme-text;
   border: 2px solid red;
   margin-left: 3rem;
 }
 
+.time-remaining {
+  font-size: 5vmin;
+}
 .time {
-  margin: 0;
-  padding: 0;
-  font-size: 4rem;
+  // font-size: 4rem;
+  font-size: 23vmin;
   font-weight: 800;
   letter-spacing: 0.065rem;
 }
