--- a/src/Components/Glassmorphic Circle/Glassmorphic Circle.scss
+++ b/src/Components/Glassmorphic Circle/Glassmorphic Circle.scss
@@ -9,8 +9,9 @@ img {
 }
 
 .circle {
+  //   border: 2px solid red;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   min-width: 280px;
   min-height: 280px;
