Change id for 'time-remaining' to 'timer-label

--- a/src/Components/Clock/Clock.scss
+++ b/src/Components/Clock/Clock.scss
@@ -19,7 +19,7 @@ img {
   //   border: 2px solid red;
 }
 
-.time-remaining {
+.timer-label {
   font-size: 5vmin;
 }
 .time {
@@ -49,7 +49,6 @@ img {
 }
 
 .btn-container {
-  //   border: 2px solid red;
   align-self: center;
   justify-content: space-between;
   span {
