--- a/src/Components/Clock/Clock.scss
+++ b/src/Components/Clock/Clock.scss
@@ -19,10 +19,10 @@ img {
   //   border: 2px solid red;
 }
 
-.timer-label {
+#timer-label {
   font-size: 5vmin;
 }
-.time {
+#time-left {
   position: relative;
   bottom: 10px;
   font-size: 23vmin;
